@@ -1,3 +1,10 @@
+openmolar (0.2.2+bzr0763-0~__DIST__0) __DIST__; urgency=low
+
+  * new upstream version
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 19 Sep 2012 22:54:16 +0100
+
+
 openmolar (0.2.2+bzr0762-0~__DIST__0) __DIST__; urgency=low
 
   * new upstream version
